# Agentom

./: .gitignore  Dockerfile  README.md  check_signature.py  pyproject.toml  requirements.txt
agentom/: agent.py  ase_agent.py  config.py  factory.py  logging_utils.py  main.py  settings.py  utils.py
agentom/agents/: _coordinator.py  ase_agent.py  coordinator.py  custom_agents.py  data_access.py  mp_agent.py  structure_agent.py  vision_agent.py  wiki_agent.py
agentom/tools/: ase_tools.py  code_graph_tool.py  common_tools.py  data_tools.py  mp_tools.py  structure_tools.py  transfer_tools.py  vision_tools.py
agentom/workspace/inputs/: mp-2480.cif
agentom/workspace/outputs/: slab_mp-676.cif
agentom_legacy/: agent.py
agentom_legacy/tools/: ase_tools.py  test_tools.py
atom_coding/: README.md  logging_utils.py  main.py
atom_coding/agents/: ase_agent.py  coordinator.py  data_access.py  vision_agent.py  wiki_agent.py
atom_coding/tools/: ase_tools.py  common_tools.py  data_tools.py  vision_tools.py
atom_coding/workspace/: bcc_Ni.cif  bcc_Ni_corrected.cif  create_bcc_ni.py  create_bcc_ni_corrected.py  generate_bcc_Ni.py
code-graph-rag/: pyproject.toml
code-graph-rag/codebase_rag/: config.py  parser_loader.py
code-graph-rag/codebase_rag/services/: llm.py
code_writer/: agent.py
test_structure_agent/: agent.py
tests/: test_clear_temp.py  test_common_tools_ignore_logs.py  test_create_interface.py  test_logging_utils.py  test_settings_config.py
try_ms_agents/: try_basic.py  try_branch_wf.py  try_tool.py  try_workflow.py
